# llm-citation-machine

./: .gitignore  README.md  citation.py  interface.py  main.py  pyproject.toml  quick_test.py  requirements.txt
.streamlit/: config.toml
api/: Dockerfile  main.py  pyproject.toml  requirements.txt
api/utils/: truncate.py
app/: app.py  main_interface.py  packages.txt  pyproject.toml  requirements.txt  settings.py  todo.md
app/.streamlit/: config.toml
app/baml_client/: inlinedbaml.py
app/baml_src/: citation.baml  clients.baml
app/src/: citation.py  install_browserforge.py  install_deps.py
app/src/baml_client/: types.py
app/src/baml_src/: citation.baml
app/tests/: playwright_test.py  quick_test.py
baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: citation.baml  clients.baml
