[project]
name = "llm-citation-machine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "baml-py==0.214.0",
    "dotenv>=0.9.9",
    "langchain>=1.1.0",
    "langchain-ollama>=1.0.0",
    "playwright>=1.56.0",
    "streamlit>=1.52.1",
    "tqdm>=4.67.1",
    "trafilatura>=2.0.0",
]
