[project]
name = "llm-citation-machine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "baml-py==0.214.0",
    "camoufox>=0.4.11",
    "dotenv>=0.9.9",
    "playwright>=1.56.0",
    "playwright-stealth>=2.0.0",
    "streamlit>=1.52.1",
    "trafilatura>=2.0.0",
]
