[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "baml-py>=0.214.0",
    "camoufox>=0.4.11",
    "playwright>=1.56.0",
    "pydantic>=2.12.5",
    "streamlit>=1.52.1",
    "trafilatura>=2.0.0",
]
